# flime

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  x  x.sh
app/: AndroidManifest.xml  MainActivity.java
assets/: AndroidManifest.xml  MainActivity.java
cache/: keystore.jks
crates/flapp/: .neoconf.json  Cargo.toml
crates/flapp/src/: lib.rs
crates/flime/: Cargo.toml
crates/flpov/: Cargo.toml
crates/flpov/src/: main.rs
crates/flvis/: Cargo.toml
crates/flvis/src/: app.rs  context.rs  gpu.rs  lib.rs  manager.rs  render.rs  shader.wgsl  utils.rs
