cargo-features = ["edition2024"]

[workspace]
resolver = "3"
default-members = ["crates/flpov"]
members = [
    "crates/flime",
    "crates/flapp",
    "crates/flvis",
    "crates/flpov",
]

[workspace.dependencies]
android-activity = "0.6.0"
android_logger = "0.14.1"
env_logger = "0.11.5"
flvis = { path = "crates/flvis" }
log = "0.4.22"
pollster = "0.4.0"
wgpu = "23.0.0"
winit = "0.30.5"
